package quorum.pb;
syntax = "proto3";

message Trx {
  string  TrxId        = 1;
  string  Type         = 2;    
  string  GroupId      = 3;
  bytes   Data         = 4; 
  int64   TimeStamp    = 5;
  string  Version      = 6;
  int64   Expired      = 7;
  int64   ResendCount  = 8;
  int64   Nonce        = 9;
  string  SenderPubkey = 10;  
  bytes   SenderSign   = 11;
  string StorageType = 12;
}

message AnnounceItem {
  string GroupId = 1;
  string SignPubkey = 2;
  string EncryptPubkey = 3;
  string AnnouncerSignature = 4;
  int64 Type = 5;
  string OwnerPubkey = 6;
  string OwnerSignature = 7;
  int64 Result = 8;
  int64  TimeStamp = 9;
  int64 Action = 10;
  string Memo = 11;
}